# D2Transformer

./: pyproject.toml
data/: dota_matches.parquet  dota_matches2.parquet  dota_matches3.parquet  dota_matches4.parquet
src/d2transformer/: __init__.py  checkout_matchdata.py  config.py  steam_api.py  transformer.py
