[project]
name = "d2transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gkerr708", email = "gkerr708@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "fastparquet>=2024.11.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
]

[project.scripts]
d2transformer = "d2transformer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
